vendor/ocaml/testsuite/tests/formatting/margins.ml.reference

# #   Characters 5-10:
  1 + "foo";;
      ^^^^^
Error: This expression has type
         string
       but an expression was expected of type
         int
#   #   Characters 5-10:
  1 + "foo";;
      ^^^^^
Error: This expression has type string but an expression was expected of type
         int
# 
